# umtx-bot

./: Dockerfile  README.md  anh.ics  calendar.ics  long.ics  pyproject.toml  run.sh
src/: pyproject.toml
src/umtis/: app.py  build.py  cli.py  fetch.py  log.py  network_json.py  spawn.py  telegram.py  utils.py
src/umtis/seleniumpro/: local_storage.py
src/umtis/sis/: api.py
