[tool.poetry]
name = "umtis"
version = "0.1.0"
description = ""
authors = ["Binh Ong <binhot@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.10.0"
selenium-wire = "^5.1.0"
requests = "^2.31.0"
screeninfo = "^0.8.1"
websockets = "^11.0.3"
ics = "^0.7.2"
python-dateutil = "^2.8.2"
undetected-chromedriver = "^3.5.2"
flask = "^2.3.2"
waitress = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = 'umtis.cli:main'